--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,7 @@ dependencies = [
     "plotly>=6.0.0",
     "gpxpy>=1.6.2",
     "trafilatura>=2.0.0",
+    "sqlalchemy>=2.0.38",
+    "scipy>=1.15.2",
+    "psycopg2-binary>=2.9.10",
 ]
